<resources>
    <string name="app_name">2030 Laundry</string>
    <string name="message_quit">Are you sure you want to exit the app?</string>
    <string name="please_wait_data_loading">Please wait data is loading...</string>
    <string name="compressing_image_please_wait">Wait for compressing image...</string>
    <string name="will_be_implemented">will be implemented later...</string>
    <string name="glide_image_error">Glide Error</string>
    <string name="field_required">Field is required and min length should be greater than 3</string>
    <string name="field_requireds">Field is required.</string>
    <string name="time_required">Time is required.</string>
    <string name="password_space">_-?!@qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM0123456789</string>
    <string name="_2030_laundry">2030 LAUNDRY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="welcome_to_laundry_app">WELCOME TO LAUNDRY APP</string>
    <string name="one_stop_destinantion_for_all_your_laundry_needs">One stop destination for all your laundry needs</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="or">or</string>
    <string name="login">Login</string>
    <string name="login_as_guest">Login as Guest</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signup">Signup</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_accept_the">I accept the </string>
    <string name="terms_and_condition">terms and conditions</string>
    <string name="problem_with_laundry">PROBLEM WITH LAUNDRY?</string>
    <string name="services">Services</string>
    <string name="report_issue">Report an Issue</string>
    <string name="my_profile">My Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback_suggestion">Feedback and Suggestions</string>
    <string name="permission_denied">If you reject permission,you can not use this service\n\nPlease turn on permissions at [Setting] > [Permission]</string>
    <string name="fast_delivery_in_24_hours">FAST DELIVERY IN 24 HOURS</string>
    <string name="we_bring_your_fresh_clothes_the_very_next_day">We bring your fresh clothes the very next day</string>
    <string name="delivery_service">DELIVERY SERVICE</string>
    <string name="we_collect_your_dirty_clothes_from_your_doorsteps">We collect your dirty clothes from your doorsteps</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="no_problem_just_click_on_the_link_below_to_reset_your_my_laundry_account_password">No problem, Just click on the link below to reset your My Laundry account password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="next">Next</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="Address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="update">Update</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="to_rest_your_password_please_enter_the_email_address_you_provided_in_the_sign_up_process">To reset your password, please enter the email address you provided in the sign up process</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_your_4_digit_code_here">Enter your 4 digit code here</string>
    <string name="didn_t_get_a_code_yet_wait_for_3_43_seconds">Didn\'t get a code yet? wait for </string>
    <string name="select_services_type">SELECT SERVICES TYPE</string>
    <string name="fold_my_clothes">Fold my clothes</string>
    <string name="leave_it_at_my_door">Leave it at my door</string>
    <string name="call_me_before">Call me before Pickup</string>
    <string name="call_me_before_delivery">Call me before Delivery</string>
    <string name="save_this_configuration">Save this Configuration</string>
    <string name="other_instructions">Other instructions</string>
    <string name="dry_clean">DRY CLEANING</string>
    <string name="steam_ironing">PRESSING</string>
    <string name="wash_amp_iron">WASHING</string>
    <string name="_2_x_shirt">2 x Shirt</string>
    <string name="_3_x_t_shirts">3 x T-shirts</string>
    <string name="_1_x_jeans">1 x Jeans</string>
    <string name="aed_15">AED 1555</string>
    <string name="aed_23">AED 23</string>
    <string name="aed_6">AED 6</string>
    <string name="cart">Cart</string>
    <string name="_40_00_aed">AED 10.00</string>
    <string name="my_order">My Orders</string>
    <string name="needed_to_reach_minimum_order">needed to reach minimum order</string>
    <string name="completed_order">Completed Order</string>
    <string name="order_id">Order ID #</string>
    <string name="pickup_date_time"><![CDATA[Pickup Date & Time]]></string>
    <string name="_08_may_2017_9_00_am_to_12_00_am"><![CDATA[08 May,2017 & 9:00 AM to 12:00 AM]]></string>
    <string name="delivery_date_time"><![CDATA[Delivery Date & Time]]></string>
    <string name="price">Price</string>
    <string name="pickup">Pickup Process</string>
    <string name="save_instructions">Save Instructions</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="order_information">Order Information</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="new_password">New Password</string>
    <string name="schedule_a_wash">Schedule a Wash</string>
    <string name="my_address">My Address</string>
    <string name="notifications">Notifications</string>
    <string name="provide_instructions">Provide Instructions</string>
    <string name="apply_coupon">Apply Coupon Code</string>
    <string name="payment_vat">Payment(vat 5%)</string>
    <string name="payment">Payment</string>
    <string name="instant_order">Instant Order</string>
    <string name="select_pickup_address">Select Pickup Address</string>
    <string name="add_pickup_address">Add Pickup Address</string>
    <string name="add_delivery_address">Add Delivery Address</string>
    <string name="select_pickup_date">Select Pickup Date</string>
    <string name="delivery_schedule">DELIVERY SCHEDULE</string>
    <string name="pickup_schedule">PICKUP SCHEDULE</string>
    <string name="select_delivery_address">Select Delivery Address</string>
    <string name="select_delivery_date">Select Delivery Date</string>
    <string name="select_address_type">SELECT ADDRESS TYPE</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="location">Location</string>
    <string name="street_name">Street Name</string>
    <string name="building_name">Building Name</string>
    <string name="floor_optional">Floor (optional)</string>
    <string name="apartment_optional">Apartment (optional)</string>
    <string name="nearest_landmark_optional">Nearest Landmark (optional)</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="save_address">Save Address</string>
    <string name="no_network_available">No Network Available</string>
    <string name="delete_succesfuly">Delete sucessfully</string>
    <string name="jeans">Jeans</string>
    <string name="tshirt">T-Shirts</string>
    <string name="suits">Suits (2 Piece)</string>
    <string name="bedsheet">Bed Sheet</string>
    <string name="pilow">Pillow Case</string>
    <string name="pay_by_credit_debit_card">Pay by Credit/Debit Card</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="cash">Cash</string>
    <string name="payment_method">Payment Method</string>
    <string name="my_cart">My Cart</string>
    <string name="order_detail">Order Detail</string>
    <string name="thankyou">Thank You</string>
    <string name="your_order_has_been_confirmed_and_we_will_be_dispatched_soon_meanwhile_you_can_check_status_of_your_order">Your order has been confirmed and it will be dispatched soon. Meanwhile you can check the status of your order.</string>
    <string name="order_history">Order History</string>
    <string name="continue_laundry">Continue Laundry</string>
    <string name="your_order_has_been_placed">Your order has been placed.</string>
    <string name="order_id_1245">ORDER ID - #</string>
    <string name="aed_0">AED 0</string>
    <string name="ship_to_my_delivery_address">Ship to my delivery Address</string>
    <string name="sheikh_khalifa_bin_salman_highway_199_manama_bahrain">Sheikh Khalifa bin Salman Highway, 199 Manama Bahrain</string>
    <string name="pickup_address">Pickup</string>
    <string name="delivery_address">Delivery</string>
    <string name="provide_instruction">PROVIDE INSTRUCTIONS</string>
    <string name="knock_the_door">Please knock the door</string>
    <string name="addres">ADDRESS</string>
    <string name="payment_metho">PAYMENT METHOD</string>
    <string name="pickup_add">PICK UP ADDRESS</string>
    <string name="delivery_add">DELIVERY ADDRESS</string>
    <string name="sub_total">Sub Total</string>
    <string name="promo_code">Promo Code</string>
    <string name="customer_details">CUSTOMER DETAILS</string>
    <string name="order_tracking_status">Order Tracking Status</string>
    <string name="pickup_details">PICKUP DETAILS</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="delivery_details">DELIVERY DETAILS</string>
    <string name="item_list">ITEM LIST</string>
    <string name="debit_card">Debit Card</string>
    <string name="total_price">TOTAL PRICE</string>
    <string name="total_items">Total Items</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_pending">Order Pending</string>
    <string name="pickup_process">Order Pickedup</string>
    <string name="deliveryProcess">Delivery Process</string>
    <string name="delivery_process">Delivery in Process</string>
    <string name="cancelled">Cancelled</string>
    <string name="order_complete">Order Completed</string>
    <string name="please_feel_free_to_contact_us_for_any_enquiries_on_the_option_below">Please feel free to Contact Us for any enquiries on the option below:</string>
    <string name="add_clothes_to_enjoy_laundry_exprience_with_us">Add clothes to enjoy laundry experience with us</string>
    <string name="start_laundry">Start Laundry</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="you_have_to_provide_a_valid_email_address_so_we_can_get_back_to_you">You have to provide a valid email Address so we can get back to you</string>
    <string name="missing_products">Missing Products</string>
    <string name="late_order">Late Order</string>
    <string name="payment_issues">Payment Issues</string>
    <string name="something_else">Something else...</string>
    <string name="report">Report</string>
    <string name="enter_your_issue_here">Enter your issue here</string>
    <string name="submit">Submit</string>
    <string name="resend_code">Resend Code</string>
</resources>