<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ingic.mylaundry.fragments.ReportAnIssueFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:orientation="vertical"
        android:paddingEnd="@dimen/x40"
        android:paddingStart="@dimen/x40"
        android:paddingTop="@dimen/x25">

        <!--<com.ingic.mylaundry.customViews.CustomTextInputLayout-->
        <!--android:id="@+id/emailInputLayout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <TextView

            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="@dimen/x14"
            android:hint="@string/email_address"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:paddingBottom="@dimen/x10"
            android:paddingStart="@dimen/x8"
            android:singleLine="true"
            android:textColor="@color/skipText_color"
            android:textColorHint="@color/skipText_color"
            android:textSize="@dimen/s15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/color_midgray" />

        <!--</com.ingic.mylaundry.customViews.CustomTextInputLayout>-->

        <TextView
            android:id="@+id/tv_reportAnIssueTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x10"
            android:text="@string/you_have_to_provide_a_valid_email_address_so_we_can_get_back_to_you"
            android:textSize="@dimen/s14" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_missingProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x10"
                android:button="@drawable/chehckbox_selector"
                android:checked="true"
                android:paddingStart="@dimen/x8"
                android:text="@string/missing_products"
                android:textColor="@color/skipText_color"
                android:textSize="@dimen/s13" />

            <RadioButton
                android:id="@+id/radio_lateOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x6"
                android:button="@drawable/chehckbox_selector"
                android:paddingStart="@dimen/x8"
                android:text="@string/late_order"
                android:textColor="@color/skipText_color"
                android:textSize="@dimen/s13" />

            <RadioButton
                android:id="@+id/radio_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x6"
                android:button="@drawable/chehckbox_selector"
                android:paddingStart="@dimen/x8"
                android:text="@string/payment_issues"
                android:textColor="@color/skipText_color"
                android:textSize="@dimen/s13" />

            <RadioButton
                android:id="@+id/somethingElse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x6"
                android:button="@drawable/chehckbox_selector"
                android:paddingStart="@dimen/x8"
                android:text="@string/something_else"
                android:textColor="@color/skipText_color"
                android:textSize="@dimen/s13" />

        </RadioGroup>

        <EditText
            android:id="@+id/et_issue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x250"
            android:layout_marginTop="@dimen/x10"
            android:background="@drawable/rounded_white"
            android:gravity="top"
            android:hint="@string/enter_your_issue_here"
            android:padding="@dimen/x15"
            android:textSize="@dimen/s14" />

        <Button
            android:id="@+id/btn_done"
            style="@style/loginbutton"
            android:layout_marginEnd="@dimen/x0"
            android:layout_marginStart="@dimen/x0"
            android:text="@string/report"
            android:textColor="@color/color_white" />

    </LinearLayout>

</ScrollView>
