<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:fillViewport="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.ingic.mylaundry.fragments.LoginFragment">

    <TextView
        android:id="@+id/tv_forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingEnd="@dimen/x10"
        android:paddingTop="@dimen/x10"
        android:text="@string/forgot_password"
        android:textColor="@color/skipText_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_splash" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/x60"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.ingic.mylaundry.customViews.CustomTextInputLayout
                android:id="@+id/emailInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:drawablePadding="@dimen/x14"
                    android:drawableStart="@drawable/email"
                    android:hint="@string/email_address"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:paddingBottom="@dimen/x10"
                    android:paddingStart="@dimen/x8"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/skipText_color"
                    android:textColorHint="@color/skipText_color"
                    android:textSize="@dimen/s16" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x1"
                    android:background="@color/color_midgray" />

            </com.ingic.mylaundry.customViews.CustomTextInputLayout>

            <com.ingic.mylaundry.customViews.CustomTextInputLayout
                android:id="@+id/passwordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/x20"
                    android:background="@null"
                    android:digits="@string/password_space"
                    android:drawablePadding="@dimen/x14"
                    android:drawableStart="@drawable/pass"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingBottom="@dimen/x10"
                    android:paddingStart="@dimen/x8"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/skipText_color"
                    android:textColorHint="@color/skipText_color"
                    android:textSize="@dimen/s16" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x1"
                    android:background="@color/color_midgray" />

            </com.ingic.mylaundry.customViews.CustomTextInputLayout>

            <Button
                android:id="@+id/btn_login"
                style="@style/loginbutton"
                android:layout_marginEnd="@dimen/x2"
                android:layout_marginStart="@dimen/x2"
                android:text="@string/login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/x1"
                android:layout_marginTop="@dimen/x2"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/skipText_color" />

                <TextView
                    android:id="@+id/tv_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/x3"
                    android:paddingRight="@dimen/x3"
                    android:text="@string/signup"
                    android:textColor="@color/color_button"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textColor="@color/skipText_color" />

            </LinearLayout>

            <Button
                android:id="@+id/btnLoginGuest"
                style="@style/login_guestbutton"
                android:text="@string/login_as_guest" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
