<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linerLayout_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/x14"
        android:layout_marginTop="@dimen/x14"

        android:gravity="right"
        android:text="@string/skip"
        android:textColor="@color/skipText_color" />

    <LinearLayout
        android:layout_marginBottom="@dimen/x20"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/w_logo" />


        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x14"
            android:gravity="center"
            android:text="@string/welcome_to_laundry_app"
            android:textColor="@color/Text_color"
            android:textSize="@dimen/s22"
            android:textStyle="bold" />

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/one_stop_destinantion_for_all_your_laundry_needs"
                android:textColor="@color/skipText_color"
                android:textSize="@dimen/s12" />

            <Button
                android:layout_marginStart="@dimen/x35"
                android:layout_marginEnd="@dimen/x35"
                android:id="@+id/btn_next"
                style="@style/loginbutton"
                android:layout_marginTop="@dimen/x10"
                android:text="@string/next" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>