<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.ingic.mylaundry.fragments.ForgotPasswordFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/password_logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x15"
        android:layout_marginStart="@dimen/x15"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x14"
            android:gravity="center"
            android:text="@string/forgot_your_password"
            android:textColor="@color/Text_color"
            android:textSize="@dimen/s22" />


        <TextView
            android:id="@+id/txt_forgotDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/x15"
            android:layout_marginStart="@dimen/x15"

            android:layout_marginTop="@dimen/x10"
            android:gravity="center_horizontal"
            android:text="@string/no_problem_just_click_on_the_link_below_to_reset_your_my_laundry_account_password"
            android:textColor="@color/skipText_color"
            android:textSize="@dimen/s12" />

        <Button
            android:id="@+id/btn_resetPassword"
            style="@style/loginbutton"
            android:layout_marginEnd="@dimen/x30"
            android:layout_marginStart="@dimen/x30"
            android:layout_marginTop="@dimen/x20"
            android:text="@string/reset_password" />
    </LinearLayout>
</LinearLayout>
